[project]
name = "ss-flowchart"
version = "0.1.0"
description = "A small Python flowchart generator for build and process pipelines using Graphviz."
readme = "README.md"
authors = [
  {name = "Your Name"}
]
requires-python = ">=3.10"
dependencies = [
  "graphviz>=0.20.1",
  "PyYAML>=6.0",
  "pytest>=8.0.0"
]

[project.scripts]
ss-flowchart = "build_viz.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
